# event_face_service

./: .env.local  Dockerfile  Makefile  compose.yaml  manage.py  pyproject.toml  tests.py
scripts/: copy_migrations.py
src/: urls.py
src/auth/: urls.py
src/auth_jwt/: apps.py  serializers.py  views.py
src/core/: asgi.py  http_clients.py  settings.py  wsgi.py
src/events/: admin.py  exceptions.py  filters.py  models.py  pagination.py  serializers.py  services.py  urls.py  views.py  worker.py
src/events/migrations/: 0001_initial.py  0002_rename_event_time_event_date.py  0003_alter_venue_name.py  0004_alter_event_options_event_created_at_and_more.py  0005_outboxmessage_alter_event_date_alter_event_name_and_more.py  0006_rename_fullname_eventregistration_full_name_and_more.py  0007_alter_event_options_rename_date_event_event_time_and_more.py
src/sync/: management.py  models.py  services.py
src/sync/management/commands/: cleanoldevents.py  syncevents.py
src/sync/migrations/: 0001_initial.py  0002_rename_added_count_synclog_created_count.py
